[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,14 +5,22 @@
     </head>
     <body>
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="https://lh3.googleusercontent.com/-juQWXfLR26U/U-HQwvF8UOI/AAAAAAAAABE/KZfBqArbSw4hV6W1GmPDROG_JRMV7oDWQCEw/w139-h140-p/IMG_8705.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id='main-text' class="center text-big bold">
-            Hi!i am prudhvi and this is my first webapp.
-            <h4> A new heading </h4>
-            i have made some local changes.
+        <h3>personal</h3>
+        <div>
+        hi,my name is prudhvi.
         </div>
+        <hr/>
+        <h3>proffesional</h3>
+        <div>
+        i am a student.
+        </div>
+        </hr>
+        <div class="footer">
+        </div> 
         <script>
         alert('hi,i\'m javascript.')
         </script>
